[gd_scene load_steps=5 format=3 uid="uid://bgbreittsjwu1"]

[ext_resource type="Texture2D" uid="uid://dvsln4lqhkcgr" path="res://art/Items/healingPotion.png" id="1_atoxp"]
[ext_resource type="Script" path="res://script/Items/HealingPotionItem.gd" id="2_jv153"]
[ext_resource type="Texture2D" uid="uid://b84fkwg61jg4g" path="res://art/Shadows/MediumShadow.png" id="3_v0q1s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6mtep"]
radius = 3.16228

[node name="Sprite2D" type="Node2D"]
script = ExtResource("2_jv153")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-1.19209e-07, 6)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_v0q1s")

[node name="Sprite2D2" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-4.23516e-22, 1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_atoxp")

[node name="Node2D" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_6mtep")

[node name="Animator" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Animator" to="." method="_on_animator_timeout"]
